getComputedStyle() doesn't report intermediate values during a transition of a pseudo element https://bugs.webkit.org/show_bug.cgi?id=106535

Reviewed by Ojan Vafai.

Source/WebCore:

Element::computedStyle and CSSComputedStyleDeclaration::getPropertyCSSValue
should use the PseudoElement and it's renderer if they exist so that
querying the computed style while an animation is running returns
the intermediate values.

No new tests, updated existing tests.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::styledNode): Added, returns either the PseudoElement or the Node.
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue): Updated to use styledNode.
* css/CSSComputedStyleDeclaration.h:
(CSSComputedStyleDeclaration):
* dom/Element.cpp:
(WebCore::Element::computedStyle): Check the PseudoElement, not just the cached pseudo style.
* dom/ElementRareData.h:
(WebCore::ElementRareData::pseudoElement): Remove ASSERT_NOT_REACHED so passing other pseudos returns 0.

LayoutTests:

Update tests to also check getComputedStyle during animations and transitions.

* fast/css-generated-content/pseudo-animation-expected.txt:
* fast/css-generated-content/pseudo-animation.html:
* fast/css-generated-content/pseudo-transition-expected.txt:
* fast/css-generated-content/pseudo-transition.html:


Canonical link: https://commits.webkit.org/127459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142215 268f45cc-cd09-0410-ab3c-d52691b4dbfc